--- a/styles/components/contact.module.scss
+++ b/styles/components/contact.module.scss
@@ -14,9 +14,11 @@
 
   .contactH2 {
     z-index: 2;
+    width: 75%;
     font-size: 4vw;
     font-family: $sans;
     font-weight: 800;
+    text-align: center;
     letter-spacing: .05vw;
   }
 
@@ -63,12 +65,12 @@
 
   .copyText {
     display: block;
-    position: absolute;
-    bottom: -4rem;
+    width: 75%;
     cursor: pointer;
     font-size: 1rem;
     font-family: $mono;
     font-style: normal;
+    text-align: center;
   }
 
   .shuffleButton {
