--- a/styles/utility/global.scss
+++ b/styles/utility/global.scss
@@ -38,6 +38,5 @@ button,
 a {
   &:focus {
     outline: 2px dashed $green;
-    outline-offset: 4px;
   }
 }
